--- a/NewSum_WinStore/pages/split/split.css
+++ b/NewSum_WinStore/pages/split/split.css
@@ -41,7 +41,7 @@
                 -ms-grid-columns: 32px 1fr;
                 -ms-grid-rows: 1fr;
                 display: -ms-grid;
-                height: 110px;
+                height: 50px;
                 width: 500px;
             }
 			
@@ -61,9 +61,13 @@
 						padding:0;
 						
                     }
+					 .splitpage .itemlistsection .itemlist .item .item-info .item-title .title {
+						min-width:100%;
+					}
 
                     .splitpage .itemlistsection .itemlist .item .item-info .item-subtitle {
                         opacity: 0.6;
+						font-size:10pt;
                     }
 
                     .splitpage .itemlistsection .itemlist .item .item-info .item-description {
