At the categories page display the total articles found that day

--- a/NewSum_WinStore/pages/items/items.css
+++ b/NewSum_WinStore/pages/items/items.css
@@ -47,6 +47,7 @@
             .itemspage .itemslist .item .item-overlay .item-subtitle {
                 -ms-grid-row: 2;
                 width: 220px;
+                font-size: 11pt;
             }
 
 @media screen and (-ms-view-state: fullscreen-landscape), screen and (-ms-view-state: fullscreen-portrait), screen and (-ms-view-state: filled) {
